# M365-Rokid-HUD

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_battery_scooter.xml  ic_bluetooth_connected.xml  ic_bluetooth_scanning.xml  ic_gateway_hud.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_motor_lock.xml  ic_notification_gateway.xml  ic_scooter.xml  ic_speedometer.xml  ic_tail_light.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
doc/: BLE_PROTOCOL_GUIDE.md  README_zh-CN.md  README_zh-TW.md
glass-hud/: build.gradle.kts  local.properties  proguard-rules.pro
glass-hud/src/main/: AndroidManifest.xml
glass-hud/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
glass-hud/src/main/res/values/: strings.xml  themes.xml
ninebot-ble/src/session/: commands.rs  light.rs  lock.rs  mod.rs
ninebot-ffi/: Cargo.toml  build_error.txt  build_log.txt
ninebot-ffi/src/: lib.rs  mi_crypto.rs
(+33 files in other folders)
