[package]
name = "ninebot-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "ninebot_ffi"

[dependencies]
jni = "0.19"
thiserror = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
pretty-hex = "0.3" 

# Crypto dependencies from ninebot-ble
btleplug = { version = "0.11", optional = true } # Removed/unused
p256 = { version = "0.10.1", features = ["ecdsa", "ecdh"] }
rand_core = "0.6.3"
elliptic-curve = "0.11.9"
ccm = "0.4.4"
aes = { version = "0.7", features = ["force-soft"] }
hkdf = "0.12.0"
sha2 = "0.10.1"
hex-literal = "0.3.4"
hmac = "0.12.1"
